library/pod-security-policy/allow-privilege-escalation/example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-privilege-escalation
  labels:
    app: nginx-privilege-escalation
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      allowPrivilegeEscalation: true #false
