library/pod-security-policy/allow-privilege-escalation/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: psp-allow-privilege-escalation-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
